--- a/shlok-style.css
+++ b/shlok-style.css
@@ -11,7 +11,7 @@ animation: color-change 1s infinite;
 @keyframes color-change {
 0% { color: red; }
 50% { color: blue; }
-100% { color: red; }
+100% { color: green; }
 }
 
 html {
